--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
-<h1 class="text-3xl font-bold underline bg-slate-700 text-cyan-200">Hello world!</h1>
+<app-main-navbar></app-main-navbar>
 
-<router-outlet />
+<main>
+  <!-- ! should have router outlet with children routes -->
+  <router-outlet></router-outlet>
+</main>
+
+<app-main-footer></app-main-footer>
