--- a/src/app/layout/main-navbar/main-navbar.component.html
+++ b/src/app/layout/main-navbar/main-navbar.component.html
@@ -1,1 +1,21 @@
-<p>main-navbar works!</p>
+<div class="w-full px-3 py-6 mx-auto shadow-xl">
+  <div
+    class="flex flex-col max-w-screen-lg mx-auto gap-y-3 sm:flex-row sm:items-center sm:justify-between"
+  >
+    <a href="/">Logo</a>
+
+    <nav>
+      <ul class="flex font-medium text-gray-700 gap-x-3">
+        <li class="hover:text-gray-300">
+          <a href="">Home</a>
+        </li>
+        <li class="hover:text-gray-300">
+          <a href="/">Posts</a>
+        </li>
+        <li class="hover:text-gray-300">
+          <a href="/">About</a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+</div>
