--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,7 @@
-<!-- ! should have a Hero Component -->
-<h1>hero component</h1>
+
+<app-hero></app-hero>
 <!-- ! should have list of project section -->
-<section class="p-3 bg-slate-400">Projects</section>
+<app-projects></app-projects>
 
 <!-- ! should have list of recent posts section -->
 <section class="p-3 bg-yellow-400">Recent Posts</section>
