--- a/src/app/layout/hero/hero.component.html
+++ b/src/app/layout/hero/hero.component.html
@@ -1,21 +1,21 @@
 <section class="max-w-screen-lg px-3 py-6 mx-auto">
-  <div
-    class="flex flex-col items-center md:flex-row md:justify-between md:gap-x-24"
-  >
+  <div class="flex flex-col items-center md:flex-row md:justify-between md:gap-x-24">
     <!-- About me -->
     <div>
       <h1 class="text-3xl font-bold">Hi I am Hatem</h1>
       <p class="mt-4 text-xl leading-9">
-        I am software developer. Lorem, ipsum dolor sit amet consectetur
-        adipisicing elit. Doloribus illo voluptas necessitatibus. Nam,
-        consequatur suscipit nulla ea repellendus iure a, architecto illum ut
-        obcaecati necessitatibus earum esse voluptatum sequi officiis.
+        I am software developer. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus illo voluptas
+        necessitatibus. Nam, consequatur suscipit nulla ea repellendus iure a, architecto illum ut obcaecati
+        necessitatibus earum esse voluptatum sequi officiis.
       </p>
     </div>
 
     <!-- Image -->
     <div class="shrink-0">
-      <img class="w-64 h-80" src="assets/avatar.svg" alt="" />
+      <img
+        class="w-64 h-80"
+        src="assets/avatar.svg"
+        alt="" />
     </div>
   </div>
 </section>
