refactor: ♻️ adjust styles

--- a/src/app/layout/hero/hero.component.html
+++ b/src/app/layout/hero/hero.component.html
@@ -13,8 +13,8 @@
     <!-- Image -->
     <div class="shrink-0">
       <img
-        class="w-64 h-80"
-        src="assets/avatar.svg"
+        class="w-80 h-80"
+        src="assets/avatar.avif"
         alt="" />
     </div>
   </div>
