--- a/src/app/layout/main-navbar/main-navbar.component.html
+++ b/src/app/layout/main-navbar/main-navbar.component.html
@@ -1,4 +1,4 @@
-<div class="w-full px-3 py-6 mx-auto shadow-xl">
+<div class="w-full px-3 py-6 mx-auto shadow-lg">
   <div class="flex flex-col max-w-screen-lg mx-auto gap-y-3 sm:flex-row sm:items-center sm:justify-between">
     <a href="/">Logo</a>
 
