--- a/src/app/layout/projects/projects.component.html
+++ b/src/app/layout/projects/projects.component.html
@@ -11,7 +11,7 @@
   </div>
 
   <div class="flex flex-col gap-6">
-    <div class="flex flex-col items-center p-3 border-red-400 rounded-md shadow-lg gap-x-8 md:flex-row">
+    <div class="flex flex-col items-center p-3 border-red-400 rounded-md shadow-md hover:shadow-xl gap-x-8 md:flex-row">
       <div class="shrink-0">
         <a href="/">
           <img
