--- a/src/app/layout/projects/projects.component.html
+++ b/src/app/layout/projects/projects.component.html
@@ -11,12 +11,14 @@
   </div>
 
   <div class="flex flex-col gap-6">
-    <div class="flex flex-col items-center p-3 border-red-400 rounded-md shadow-md hover:shadow-xl gap-x-8 md:flex-row">
+    <div
+      *ngFor="let item of projectsList"
+      class="flex flex-col items-center p-3 border-red-400 rounded-md shadow-md hover:shadow-xl gap-x-8 md:flex-row">
       <div class="shrink-0">
         <a href="/">
           <img
             class="h-36 w-36"
-            src="assets/project-1.png"
+            [src]="item.imageSrc"
             alt="" />
         </a>
       </div>
@@ -24,9 +26,9 @@
         <div class="flex flex-col items-center gap-y-2 md:flex-row">
           <a
             class="text-xl font-semibold hover:text-red-500"
-            href="/"
-            >Project 1 Name</a
-          >
+            href="/">
+            {{ item.title }}
+          </a>
           <div class="flex flex-wrap gap-2 ml-3">
             <div class="px-2 py-1 text-xs font-semibold rounded-md text-fuchsia-900 bg-fuchsia-400">HTML</div>
             <div class="px-2 py-1 text-xs font-semibold text-blue-900 bg-blue-400 rounded-md">CSS</div>
@@ -34,9 +36,7 @@
           </div>
         </div>
         <p class="mt-3 text-gray-600">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores quae dignissimos perferendis? Magnam nam
-          odio nesciunt eum suscipit commodi sapiente esse delectus saepe accusantium repudiandae, exercitationem
-          ducimus eveniet voluptate maxime!
+          {{ item.description }}
         </p>
       </div>
     </div>
