--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,7 @@
 <app-hero></app-hero>
-<!-- ! should have list of project section -->
+
 <app-projects></app-projects>
 
 <!-- ! should have list of recent posts section -->
-<section class="p-3 bg-yellow-400">Recent Posts</section>
+
+<app-posts></app-posts>
