--- a/src/app/layout/main-footer/main-footer.component.html
+++ b/src/app/layout/main-footer/main-footer.component.html
@@ -1,1 +1,5 @@
-<p>main-footer works!</p>
+<footer class="max-w-screen-lg px-3 py-6 mx-auto">
+  <div class="pt-5 border-t border-gray-400">
+    <p class="text-sm text-gray-600">© Copyright 2024 Blog Boilerplate. Built with Angular</p>
+  </div>
+</footer>
