--- a/src/app/layout/posts/posts.component.html
+++ b/src/app/layout/posts/posts.component.html
@@ -1,4 +1,34 @@
 <section class="max-w-screen-lg px-3 py-6 mx-auto">
-  <div class="mb-6 text-2xl font-bold"></div>
-  <div class="grid grid-cols-1 gap-6"></div>
+  <div class="mb-6 text-2xl font-bold">
+    <div class="flex items-baseline justify-between">
+      <p>Recent Posts</p>
+      <a
+        href="/"
+        class="text-sm hover:text-red-500">
+        View all →
+      </a>
+    </div>
+  </div>
+  <div class="grid grid-cols-1 gap-6 md:grid-cols-3 sm:grid-cols-2">
+    <a
+      href="/"
+      *ngFor="let item of recentPostsList"
+      class="shadow hover:translate-y-1">
+      <div class="overflow-hidden rounded-md bg-slate-50">
+        <div class="aspect-w-3 aspect-h-2">
+          <img
+            class="object-cover object-center w-full h-full"
+            src="https://placehold.co/600x400"
+            alt="" />
+        </div>
+        <div class="px-3 pt-4 pb-6 text-center">
+          <h2 class="text-xl font-semibold">{{ item.title }}</h2>
+          <span class="mt-1 text-xs text-gray-400">{{ item.publishedOn }}</span>
+          <p class="mt-2 text-sm">
+            {{ item.description }}
+          </p>
+        </div>
+      </div>
+    </a>
+  </div>
 </section>
