--- a/src/app/layout/main-navbar/main-navbar.component.html
+++ b/src/app/layout/main-navbar/main-navbar.component.html
@@ -1,18 +1,21 @@
 <div class="w-full px-3 py-6 mx-auto shadow-lg">
   <div class="flex flex-col max-w-screen-lg mx-auto gap-y-3 sm:flex-row sm:items-center sm:justify-between">
     <a href="/">
-      <img  src="assets/logo-s.png" alt="Logo">
+      <img
+        class="max-w-16"
+        src="assets/logo-s.png"
+        alt="Logo" />
     </a>
 
     <nav>
-      <ul class="flex font-medium text-gray-700 gap-x-3">
-        <li class="hover:text-gray-300">
+      <ul class="flex text-xl font-bold text-gray-800 gray-700 text-l gap-x-5">
+        <li class="hover:text-gray-500">
           <a href="">Home</a>
         </li>
-        <li class="hover:text-gray-300">
+        <li class="hover:text-gray-500">
           <a href="/">Posts</a>
         </li>
-        <li class="hover:text-gray-300">
+        <li class="hover:text-gray-500">
           <a href="/">About</a>
         </li>
       </ul>
