--- a/src/app/layout/main-navbar/main-navbar.component.html
+++ b/src/app/layout/main-navbar/main-navbar.component.html
@@ -1,5 +1,5 @@
 <div class="w-full px-3 py-6 mx-auto shadow-lg">
-  <div class="flex flex-col max-w-screen-lg mx-auto gap-y-3 sm:flex-row sm:items-center sm:justify-between">
+  <div class="flex flex-col items-center max-w-screen-lg mx-auto gap-y-8 sm:flex-row sm:justify-between sm:gap-y-3">
     <a href="/">
       <img
         class="max-w-16"
