fix: responsive header

--- a/src/app/layout/main-navbar/main-navbar.component.html
+++ b/src/app/layout/main-navbar/main-navbar.component.html
@@ -13,7 +13,7 @@
           <a href="">Home</a>
         </li>
         <li class="hover:text-gray-500">
-          <a href="/">Posts</a>
+          <a href="/posts">Posts</a>
         </li>
         <li class="hover:text-gray-500">
           <a href="/">About</a>
