feat: login form and primeng theme

--- a/src/app/layout/hero/hero.component.html
+++ b/src/app/layout/hero/hero.component.html
@@ -13,7 +13,7 @@
     <!-- Image -->
     <div class="shrink-0">
       <img
-        class="w-80 h-80"
+        class="shadow hover:shadow-lg w-80 h-80"
         src="assets/avatar.avif"
         alt="" />
     </div>
