--- a/src/app/layout/main-navbar/main-navbar.component.html
+++ b/src/app/layout/main-navbar/main-navbar.component.html
@@ -10,13 +10,13 @@
     <nav>
       <ul class="flex text-xl font-bold text-gray-800 gray-700 text-l gap-x-5">
         <li class="hover:text-gray-500">
-          <a href="">Home</a>
+          <a href="">Blog</a>
         </li>
         <li class="hover:text-gray-500">
-          <a href="/posts">Posts</a>
+          <a href="/about">About</a>
         </li>
         <li class="hover:text-gray-500">
-          <a href="/">About</a>
+          <a href="/contact">Contact</a>
         </li>
       </ul>
     </nav>
