--- a/src/app/layout/hero/hero.component.html
+++ b/src/app/layout/hero/hero.component.html
@@ -1,8 +1,8 @@
-<section class="max-w-screen-lg px-3 py-6 mx-auto">
+<section class="max-w-screen-lg px-6 py-6 mx-auto">
   <div class="flex flex-col items-center md:flex-row md:justify-between md:gap-x-24">
     <!-- About me -->
     <div>
-      <h1 class="text-3xl font-bold">Hi I am Hatem</h1>
+      <h1 class="text-5xl font-bold">Hi there 👋</h1>
       <p class="mt-4 text-xl leading-9">
         I am software developer. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus illo voluptas
         necessitatibus. Nam, consequatur suscipit nulla ea repellendus iure a, architecto illum ut obcaecati
