--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -8,7 +8,10 @@
       (ngSubmit)="submit()"
       [formGroup]="LoginForm">
       <!-- Checkbox Input -->
-      <div class="flex justify-center">
+      <div
+        p-floatLabel
+        class="flex justify-center">
+        <label class="me-5">Aren't you..?</label>
         <p-toggleButton
           formControlName="checked"
           onLabel="Yes"
