feat: add hero-section

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
-<app-main-navbar></app-main-navbar>
-
-<main>
+<main class="relative">
+  <app-main-navbar></app-main-navbar>
   <router-outlet></router-outlet>
   <app-main-footer></app-main-footer>
 </main>
