--- a/src/app/layout/hero/hero.component.html
+++ b/src/app/layout/hero/hero.component.html
@@ -1,4 +1,4 @@
-<section class="max-w-screen-lg px-6 py-6 mx-auto">
+<section class="px-6 py-6 mx-auto h-screen">
   <div class="flex flex-col items-center md:flex-row md:justify-between md:gap-x-24">
     <!-- About me -->
     <div>
@@ -11,11 +11,6 @@
     </div>
 
     <!-- Image -->
-    <div class="shrink-0">
-      <img
-        class="shadow hover:shadow-lg w-80 h-80"
-        src="assets/avatar.avif"
-        alt="" />
-    </div>
+    <div class="shrink-0"></div>
   </div>
 </section>
